<resources>
    <string name="app_name">NMedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="netology_description">Нетология. Университет интернет-рофессий будущего.</string>
    <string name="timeOfPublishing">21 мая 18:36</string>
    <string name="avatarlogo">avatarLogo</string>
    <string name="morevert">moreVert</string>
    <string name="netologyPostContent">Привет! Это новая Нетология. Когда-то Нетология начиналась с интенсивов по онлайн-маркетингу. Затем появились курсы по дизайну, разработке, аналитике и управлению.</string>
    <string name="numberOfLikes">1000</string>
    <string name="numberOfShares">5</string>
    <string name="numberOfViews">5</string>
    <string name="likeLogo">likeLogo</string>
    <string name="shareLogo">shareLogo</string>
    <string name="viewsLogo">viewsLogo</string>
    <string name="menu_edit">Редактировать</string>
    <string name="menu_remove">Удалить</string>
    <string name="post_text">Текст</string>
    <string name="saveButton">saveButton</string>
    <string name="clearButton">clearButton</string>
    <string name="error_empty_content">Text can\'t be empty</string>
    <string name="video">video</string>
</resources>