<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/common_spacing"
    tools:context=".activity.MainActivity">

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/netology_description"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/published"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatarIV"
        app:layout_constraintTop_toTopOf="@id/avatarIV" />

    <TextView
        android:id="@+id/published"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timeOfPublishing"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/avatarIV"
        app:layout_constraintStart_toStartOf="@id/author"
        app:layout_constraintTop_toBottomOf="@id/author" />

    <ImageView
        android:id="@+id/avatarIV"
        android:layout_width="@dimen/posts_avatar_size"
        android:layout_height="@dimen/posts_avatar_size"
        android:layout_marginBottom="@dimen/common_spacing"
        android:contentDescription="@string/avatarlogo"
        app:layout_constraintBottom_toTopOf="@id/barrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/netology" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu"
        style="@style/Widget.App.OnlyIconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/morevert"
        app:icon="@drawable/ic_baseline_more_vert_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatarIV"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="80dp" />

    <TextView
        android:id="@+id/postText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_spacing"
        android:layout_marginBottom="@dimen/common_spacing"
        android:autoLink="web"
        android:paddingBottom="@dimen/common_spacing"
        android:text="@string/netologyPostContent"
        app:layout_constraintTop_toBottomOf="@id/barrier" />

    <ImageView
        android:id="@+id/video_preview"
        android:layout_width="match_parent"
        android:layout_height="@dimen/video_height"
        android:layout_marginBottom="@dimen/common_spacing"
        android:contentDescription="@string/video"
        android:src="@drawable/video_preview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/postText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/play"
        style="@style/Widget.App.PlayButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:checkable="true"
        android:contentDescription="@string/video"
        app:icon="@drawable/ic_baseline_play_circle_outline_48"
        app:layout_constraintBottom_toBottomOf="@id/video_preview"
        app:layout_constraintLeft_toLeftOf="@id/video_preview"
        app:layout_constraintRight_toRightOf="@id/video_preview"
        app:layout_constraintTop_toTopOf="@id/video_preview" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/videoGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="video_preview,play" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="postText"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="181dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/likeLogo"
        style="@style/Widget.App.LikeButton"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:checkable="true"
        android:contentDescription="@string/likeLogo"
        android:text="@string/numberOfLikes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/video_preview" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/shareLogo"
        style="@style/Widget.App.ShareButton"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:checkable="true"
        android:contentDescription="@string/shareLogo"
        android:text="@string/numberOfShares"
        app:layout_constraintStart_toEndOf="@id/likeLogo"
        app:layout_constraintTop_toBottomOf="@id/video_preview" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/viewsLogo"
        style="@style/Widget.App.OnlyIconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/viewsLogo"
        app:icon="@drawable/ic_baseline_remove_red_eye_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/video_preview" />

</androidx.constraintlayout.widget.ConstraintLayout>
